log/build_2023-09-13_14-19-16/estop_button/stderr.log
  File "/home/wyatt/ros2_ws/install/estop_button/lib/python3.10/site-packages/estop_button/estop_button.py", line 36
    if self.arduino ==:
                      ^
SyntaxError: invalid syntax

